Changelog
=========

9.2-dev0 - (unreleased)
---------------------------

9.1 - (2025-10-24)
---------------------------
* Fix: tests for Plone 5
  [ichim-david - refs #292589]

9.0 - (2025-10-08)
---------------------------
* Fix: teaser block serializer to not clear href for non-http urls
  [ichim-david - refs #292589]
* Breaking: drop testing for Plone 5 that used plone.restapi 8.x
  Version 8 was deprecated in 2023
  [ichim-david - refs #292589]

8.5 - (2025-08-27)
---------------------------
* Change: Release
  [dobri1408]

8.4 - (2025-08-20)
---------------------------
* Change: feat: Control Navigation Settings TTW - refs #288509
  [avoinea]

8.3 - (2025-08-19)
---------------------------
* Change: Release
  [dobri1408]

8.2 - (2025-08-11)
---------------------------
* Change: Release with an older python 3 version
  [valentinab25]

8.1 - (2025-08-04)
---------------------------
* Change: fix(upgrade): for images, allowing also to run @@image-migrate script
  [ichim-david]

8.0 - (2025-07-31)
-----------------------
* Create method to update all backend:8080 to resolveuid
  [dobri1408 - refs #290024]
* Feature: added migration script for `item`, `teaser` and `hero`
  to new attachedimage array of object like object_browser widget
  [ichim-david refs #254622]

7.3 - (2025-05-29)
---------------------------
* Fix: ComponentLookupError eea_breadcrumbs_view
  [avoinea]

7.2 - (2025-04-30)
---------------------------
* Feature: Add email field to Users vocabulary
  [tedw87 - refs #274362]

7.1 - (2025-03-05)
---------------------------
* Change: Make upgrade step for svg update more efficent - refs #276995
  [avoinea]

7.0 - (2025-02-06)
---------------------------
* Feature: Improve plone.restapi controlpanel to check cp permissions
  [razvanMiu - ref #282173]
* Fix: Link getRemoteUrl for anonymous users when used as part of global navigation
  [ichim-david - refs #284346]
* Fix: navigation layer registration
  [tiberiuichim]

6.4 - (2025-02-03)