@@ -3,6 +3,8 @@ Changelog
 
 9.2-dev0 - (unreleased)
 ---------------------------
+* Change: Replace Python linting to ruff
+  [mihaidobrescu1111 = refs #286821]
 
 9.1 - (2025-10-24)
 ---------------------------
